--- a/package.json
+++ b/package.json
@@ -12,13 +12,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.11",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.11",
     "@angular/compiler": "~8.2.11",
     "@angular/core": "~8.2.11",
+    "@angular/fire": "^5.2.3",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.11",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@ngx-loading-bar/core": "^4.2.0",
+    "@ngx-loading-bar/router": "^4.2.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "acorn": "^7.2.0",
+    "ansi-colors": "^4.1.1",
+    "bcryptjs": "2.4.3",
+    "firebase": "^7.6.0",
+    "ngx-perfect-scrollbar": "^8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
